syntax = "proto3";
package new;

option go_package = "gateway-service/pb;new";

message GetListDataRequest {
    string search = 1;
    optional double low_price = 2;
    optional double high_price = 3;
    string restaurant = 4;
}